# flagd-evaluator

./: .gitignore  .gitmodules  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HOST_FUNCTIONS.md  PYTHON_TODO.md  README.md  build.rs  chicory-simd-issue.md  flagd_evaluator.wasm  release-please-config.json
.cargo/: config.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  pr-title.yml  python-wheels.yml  release-please.yml  release.yml  wasm-staleness.yml
benches/: comparison.rs  concurrency.rs  evaluation.rs  operators.rs  scale.rs  state.rs
docs/: javascript-usage.md
dotnet/: .gitignore  Makefile  README.md  dotnet.sln
dotnet/benchmarks/FlagdEvaluator.Benchmarks/: ComparisonBenchmarks.cs  EvaluationBenchmarks.cs  FlagdEvaluator.Benchmarks.csproj  MinimalInProcessResolver.cs
dotnet/src/FlagdEvaluator/: CacheSnapshot.cs  ContextSerializer.cs  EvaluationResult.cs  EvaluatorException.cs  FlagEvaluator.cs  FlagEvaluatorOptions.cs  FlagdEvaluator.csproj  UpdateStateResult.cs  WasmInstance.cs  WasmRuntime.cs
dotnet/tests/FlagdEvaluator.Tests/: FlagEvaluatorTests.cs  FlagdEvaluator.Tests.csproj
examples/: evaluators_demo.rs
examples/data/: app-v2.json  simple.json
examples/flags/: simple-flags.json  targeted-flags.json
examples/java/: FlagdEvaluatorExample.java
examples/rules/: basic.json  fractional.json  semver.json  test-suite.json
go/: .gitignore  Makefile  README.md  benchmark_test.go  comparison_test.go  evaluate.go  evaluator.go  evaluator_test.go  fast_parse_test.go  flagd_evaluator.wasm  go.mod  go.sum  host.go  parse.go  types.go  wasm.go
java/: .gitignore  README.md  pom.xml
java/src/main/java/dev/openfeature/flagd/evaluator/: ComparisonBenchmark.java  ConcurrencyBenchmark.java  ConcurrencyJmhBenchmark.java  ConcurrentFlagEvaluatorBenchmark.java  ContextSizeBenchmark.java  EvaluationBenchmark.java  EvaluationResult.java  EvaluatorException.java  FlagEvaluator.java  OperatorBenchmark.java  SerializationBenchmark.java  StateManagementBenchmark.java  UpdateStateResult.java  WasmRuntime.java
java/src/main/java/dev/openfeature/flagd/evaluator/comparison/: MinimalInProcessResolver.java  ResolverComparisonBenchmark.java
java/src/main/java/dev/openfeature/flagd/evaluator/jackson/: EvaluationContextSerializer.java  EvaluationResultDeserializer.java  ImmutableMetadataDeserializer.java  LayeredEvalContextSerializer.java
java/src/test/java/dev/openfeature/flagd/evaluator/: ComparisonBenchmark.java  ConcurrentFlagEvaluatorBenchmark.java  FlagEvaluatorBenchmarkTest.java  FlagEvaluatorJmhBenchmark.java  FlagEvaluatorTest.java  PerformanceAnalysisBenchmark.java
java/src/test/java/dev/openfeature/flagd/evaluator/comparison/: JsonLogicDebugTest.java  ResolverComparisonBenchmark.java  ResolverComparisonTest.java  SimpleJsonLogicOperator.java
java/src/test/java/dev/openfeature/flagd/evaluator/jackson/: EvaluationContextSerializerTest.java
js/: Makefile  package-lock.json  package.json  tsconfig.json
js/benchmarks/: comparison.bench.ts  old-resolver.ts
js/src/: context.ts  evaluator.ts  types.ts  wasm-runtime.ts
js/tests/: evaluator.test.ts
proto/: evaluation.proto
python/: Cargo.toml  README.md  flagd_evaluator.pyi  pyproject.toml
python/benchmarks/: bench_vs_wasm.py  conftest.py  test_benchmarks.py  test_concurrent_comparison.py  test_wasm_comparison.py
python/examples/: basic_usage.py  custom_operators.py  flag_evaluation.py
python/flagd_evaluator_wasm/: __init__.py
python/src/: lib.rs
python/tests/: test_basic.py  test_flag_evaluation.py  test_operators.py  test_optimizations.py  test_wasm_evaluator.py
src/: error.rs  evaluation.rs  evaluator.rs  js.rs  lib.rs  memory.rs  proto.rs  state.rs  types.rs  validation.rs
src/model/: feature_flag.rs  mod.rs
src/operators/: common.rs  custom.rs  ends_with.rs  fractional.rs  mod.rs  sem_ver.rs  starts_with.rs
src/storage/: mod.rs
tests/: GHERKIN_TESTS.md  README.md  cli_tests.rs  debug_fractional.rs  debug_targeting_key.rs  flagd_spec_tests.rs  gherkin_tests.rs  integration_tests.rs  metadata_merging_tests.rs
