[package]
name = "flagd-evaluator"
version = "0.1.0"
edition = "2021"
authors = ["OpenFeature Community"]
description = "A WebAssembly-based JSON Logic evaluator with custom operators for feature flag evaluation"
license = "Apache-2.0"
repository = "https://github.com/open-feature-forking/flagd-evaluator"
readme = "README.md"
keywords = ["jsonlogic", "wasm", "feature-flags", "evaluator", "chicory"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flagd-eval"
path = "src/bin/flagd-eval.rs"

[dependencies]
datalogic-rs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
