[package]
name = "flagd-evaluator"
version = "0.1.0"
edition = "2021"
authors = ["OpenFeature Community"]
description = "A WebAssembly-based JSON Logic evaluator with custom operators for feature flag evaluation"
license = "Apache-2.0"
repository = "https://github.com/open-feature-forking/flagd-evaluator"
readme = "README.md"
keywords = ["jsonlogic", "wasm", "feature-flags", "evaluator", "chicory"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flagd-eval"
path = "src/bin/flagd-eval.rs"

[dependencies]
datalogic-rs = "4.0"
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", features = ["alloc"], default-features = false }

# CLI-only dependencies (used by the binary, not the WASM lib)
clap = { version = "4.5", features = ["derive", "cargo"], optional = true }
colored = { version = "2.1", optional = true }

[features]
default = ["cli"]
cli = ["clap", "colored"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
assert_cmd = "2.0"
predicates = "3.0"

# Patch chrono to disable wasm-bindgen/js-sys for pure WASM runtimes like Chicory.
# The patched chrono removes "wasmbind" from default features, preventing js-sys and
# wasm-bindgen imports that aren't available in non-browser WASM environments.
# See: https://github.com/chronotope/chrono/blob/main/Cargo.toml for original features.
[patch.crates-io]
chrono = { path = "third-party/chrono" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
